src/objects/c2g__codaTransactionLineItem__c.object
<CustomObject>
    <fields>
        <fullName>c2g__LocalGLAValue__c</fullName>
        <label>Local GLA Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__LocalGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Local GLA)</relationshipLabel>
        <relationshipName>TransactionLineItemsLocalGLA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__MatchingStatus__c</fullName>
        <label>Matching Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                    <default>true</default>
                    <label>Available</label>
                </value>
                <value>
                    <fullName>Matched</fullName>
                </value>
                <value>
                    <fullName>Not Matchable</fullName>
                </value>
                <value>
                    <fullName>Proposed</fullName>
                </value>
                <value>
                    <fullName>Proposed Void</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__OnHold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__OriginalAccount__c</fullName>
        <label>Original Account</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__OwningCurrencyRevaluation__c</fullName>
        <description>The ID of the Currency Revaluation (if any) which owns this transaction line.</description>
        <label>Owning Currency Revaluation</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__OwningDualCurrencyRevaluation__c</fullName>
        <description>The ID of the Dual Currency Revaluation (if any) which owns this transaction line.</description>
        <label>Owning Dual Currency Revaluation</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ProcessStatus__c</fullName>
        <label>Process Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Profit and Loss</fullName>
                </value>
                <value>
                    <fullName>Balance Sheet</fullName>
                </value>
                <value>
                    <fullName>Not Processed</fullName>
                    <default>true</default>
                    <label>Not Processed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ReportAdjustOperatingActivities__c</fullName>
        <formula>if(isblank(text(c2g__CashFlowCategory__c)), c2g__GeneralLedgerAccount__r.c2g__AdjustOperatingActivities__c,c2g__AdjustOperatingActivities__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This value is used to determine the final categorization of the transaction line item on the Statement of Cash Flows report.</inlineHelpText>
        <label>Report Reclassify Profits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ReportCashFlowCategory__c</fullName>
        <formula>if(isblank(text(c2g__CashFlowCategory__c)), text(c2g__GeneralLedgerAccount__r.c2g__CashFlowCategory__c), text(c2g__CashFlowCategory__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This value is used to determine the final categorization of the transaction line item on the Statement of Cash Flows report.</inlineHelpText>
        <label>Report Cash Flow Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ReportCashFlowLineSummary__c</fullName>
        <formula>if(isblank(text(c2g__CashFlowCategory__c)), text(c2g__GeneralLedgerAccount__r.c2g__CashFlowLineSummary__c), text(c2g__CashFlowLineSummary__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This value is used to determine the final categorization of the transaction line item on the Statement of Cash Flows report.</inlineHelpText>
        <label>Report Cash Flow Line Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ReverseChargeTaxCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reverse Charge Tax Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Reverse Charge Tax Code)</relationshipLabel>
        <relationshipName>TransactionLineItemsReverseChargeTaxCode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__StatementDate__c</fullName>
        <formula>c2g__BankReconciliation__r.c2g__StatementDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Tax Code 1)</relationshipLabel>
        <relationshipName>TransactionLineItemsTC1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 2</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Tax Code 2)</relationshipLabel>
        <relationshipName>TransactionLineItemsTC2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 3</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Transaction Line Items (Tax Code 3)</relationshipLabel>
        <relationshipName>TransactionLineItemsTC3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxGroup__c</fullName>
        <label>Tax Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionDate__c</fullName>
        <formula>c2g__Transaction__r.c2g__TransactionDate__c</formula>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionReconciliationDate__c</fullName>
        <label>Transaction Reconciliation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__TransactionReconciliationStatus__c</fullName>
        <label>Transaction Reconciliation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Proposed</fullName>
                </value>
                <value>
                    <fullName>Reconciled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__TransactionReconciliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Reconciliation</label>
        <referenceTo>c2g__TransactionReconciliation__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Transaction__c</fullName>
        <label>Transaction Number</label>
        <referenceTo>c2g__codaTransaction__c</referenceTo>
        <relationshipLabel>Transaction Line Items</relationshipLabel>
        <relationshipName>TransactionLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Version__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Transaction Line Item</label>
    <listViews>
        <fullName>c2g__BankReconciliation</fullName>
        <columns>c2g__BankAccount__c</columns>
        <columns>c2g__BankAccountValue__c</columns>
        <columns>c2g__Account__c</columns>
        <columns>c2g__LineDescription__c</columns>
        <columns>c2g__BankReconciliation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__BankAccount__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>c2g__BankReconciliation__c</field>
            <operation>equals</operation>
        </filters>
        <label>Bank Reconciliation</label>
    </listViews>
    <listViews>
        <fullName>c2g__BankReconciliationAll</fullName>
        <columns>c2g__BankAccount__c</columns>
        <columns>c2g__BankAccountValue__c</columns>
        <columns>c2g__Account__c</columns>
        <columns>c2g__LineDescription__c</columns>
        <columns>c2g__BankReconciliation__c</columns>
        <columns>c2g__BankReconciliationStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__BankAccount__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Bank Reconciliation - All</label>
    </listViews>
    <listViews>
        <fullName>c2g__BankReconciliationAvailable</fullName>
        <columns>c2g__BankAccount__c</columns>
        <columns>c2g__BankAccountValue__c</columns>
        <columns>c2g__Account__c</columns>
        <columns>c2g__LineDescription__c</columns>
        <columns>c2g__BankReconciliation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__BankAccount__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>c2g__BankReconciliation__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>c2g__DateCanceled__c</field>
            <operation>equals</operation>
        </filters>
        <label>Bank Reconciliation - Available</label>
    </listViews>
    <listViews>
        <fullName>c2g__BankReconciliationReconciled</fullName>
        <columns>c2g__BankAccount__c</columns>
        <columns>c2g__BankAccountValue__c</columns>
        <columns>c2g__Account__c</columns>
        <columns>c2g__LineDescription__c</columns>
        <columns>c2g__BankReconciliation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__BankAccount__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>c2g__BankReconciliation__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Bank Reconciliation - Reconciled</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DIM1_Inactive</fullName>
        <active>true</active>
        <description>If Dimension 1 is Inactive then error</description>
        <errorConditionFormula>c2g__Dimension1__r.Inactive__c = TRUE</errorConditionFormula>
        <errorMessage>The Property is Inactive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dimension_1_Required</fullName>
        <active>true</active>
        <description>Dimension 1 Required</description>
        <errorConditionFormula>AND( ISBLANK( c2g__Dimension1__c ), c2g__OwnerCompany__r.Use_Dimension_1__c =True, c2g__GeneralLedgerAccount__r.Dimension_1_Required__c =True )</errorConditionFormula>
        <errorMessage>Dimension 1 Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dimension_2_Required</fullName>
        <active>true</active>
        <description>Dimension 2 Required</description>
        <errorConditionFormula>AND( ISBLANK( c2g__Dimension2__c ), c2g__OwnerCompany__r.Use_Dimension_2__c =True, c2g__GeneralLedgerAccount__r.Dimension_2_Required__c =True )</errorConditionFormula>
        <errorMessage>Dimension 2 Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dimension_3_Required</fullName>
        <active>true</active>
        <description>Dimension 3 Required</description>
        <errorConditionFormula>AND( ISBLANK( c2g__Dimension3__c ), c2g__OwnerCompany__r.Use_Dimension_3__c =True, c2g__GeneralLedgerAccount__r.Dimension_3_Required__c =True )</errorConditionFormula>
        <errorMessage>Dimension 3 Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dimension_4_Required</fullName>
        <active>true</active>
        <description>Dimension 4 Required</description>
        <errorConditionFormula>AND( ISBLANK( c2g__Dimension4__c ), c2g__OwnerCompany__r.Use_Dimension_4__c =True, c2g__GeneralLedgerAccount__r.Dimension_4_Required__c =True )</errorConditionFormula>
        <errorMessage>Dimension 4 Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sub_Ledger_Required_Account</fullName>
        <active>true</active>
        <description>Sub Ledger Required: Account</description>
        <errorConditionFormula>And(text(c2g__GeneralLedgerAccount__r.Sub_Ledger_Required__c) = &quot;Account&quot;,  ISBLANK(c2g__Account__c )=TRUE)</errorConditionFormula>
        <errorMessage>Sub Ledger Required: Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sub_Ledger_Required_Bank</fullName>
        <active>true</active>
        <description>Sub Ledger Required: Bank</description>
        <errorConditionFormula>And(text(c2g__GeneralLedgerAccount__r.Sub_Ledger_Required__c) = &quot;Bank&quot;,  ISBLANK( c2g__BankAccount__c )=TRUE)</errorConditionFormula>
        <errorMessage>Sub Ledger Required: Bank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sub_Ledger_Required_Product</fullName>
        <active>true</active>
        <description>Sub Ledger Required: Product</description>
        <errorConditionFormula>And(text(c2g__GeneralLedgerAccount__r.Sub_Ledger_Required__c) = &quot;Product&quot;,  ISBLANK(  c2g__Product__c  )=TRUE)</errorConditionFormula>
        <errorMessage>Sub Ledger Required: Product</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sub_Ledger_Required_Tax</fullName>
        <active>true</active>
        <description>Sub Ledger Required: Tax</description>
        <errorConditionFormula>And(text(c2g__GeneralLedgerAccount__r.Sub_Ledger_Required__c) = &quot;Tax&quot;,  ISBLANK(   c2g__TaxCode1__c  )=TRUE)</errorConditionFormula>
        <errorMessage>Sub Ledger Required: Tax</errorMessage>
    </validationRules>
</CustomObject>